--- a/MainMenu.html
+++ b/MainMenu.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Main Menu</title>
+    <link rel="stylesheet" href="Main.css">
 </head>
 <body>
     <h1>
@@ -14,7 +15,13 @@
         The rules are simple:
     </h2>
     <h3>
-        
+        <li>
+            <ol>There are 8 hidden pairs of pictures</ol>
+            <ol>Your job is to find all the pairs</ol>
+            <ol>To find a pair, click on any 2 pictures and if they match, that's a pair!</ol>
+            <ol>every time you click a picture, your score increases by 1!</ol>
+            <ol>try to get the lowest score you can!</ol>
+        </li>
     </h3>
     <button ahref = "">Start</button>
 </body>
