--- a/MainMenu.html
+++ b/MainMenu.html
@@ -23,6 +23,12 @@
             <ol>try to get the lowest score you can!</ol>
         </li>
     </h3>
-    <button ahref = "">Start</button>
+    <button id="Button" class="float-left submit-button" >Start</button>
+
+    <script>
+    document.getElementById("Button").onclick = function () {
+        location.href = "game.html";
+    };
+    </script>
 </body>
 </html>
