--- a/game.html
+++ b/game.html
@@ -9,29 +9,32 @@
 </head>
 <body>
     <div class="grid-container">
-        <div class="grid-item" id="1">
+        <div class="grid-item" id="title">
             <h1> ***** MATCH</h1>
         </div>
-        <div class="grid-item" id="2">
-            2
+        <div class="grid-item" id="game">
+            <div class="game">
+                <div class="cards" id="1">1</div>
+                <div class="cards" id="2">2</div>
+                <div class="cards" id="3">3</div>
+                <div class="cards" id="4">4</div>
+                <div class="cards" id="5">5</div>
+                <div class="cards" id="6">6</div>
+                <div class="cards" id="7">7</div>
+                <div class="cards" id="8">8</div>
+                <div class="cards" id="9">9</div>
+                <div class="cards" id="10">10</div>
+                <div class="cards" id="11">11</div>
+                <div class="cards" id="12">12</div>
+                <div class="cards" id="13">13</div>
+                <div class="cards" id="14">14</div>
+                <div class="cards" id="15">15</div>
+                <div class="cards" id="16">16</div>
+            </div>
         </div>
-        <div class="grid-item">
-            3
-        </div>
-        <div class="grid-item">
-            4
-        </div>
-        <div class="grid-item">
-            5
-        </div>
-        <div class="grid-item">
-            6
-        </div>
-        <div class="grid-item">
-            7
-        </div>
-        <div class="grid-item">
-            8
+        <div class="grid-item" id="box">
+            <button>RESET</button>
+            <p>Score: </p>
         </div>
     </div>
 </body>
