--- a/MainMenu.html
+++ b/MainMenu.html
@@ -23,7 +23,7 @@
             <ol>try to get the lowest score you can!</ol>
         </li>
     </h3>
-    <button id="Button" class="float-left submit-button" >Start</button>
+    <div class="center"><button id="Button" class="float-left submit-button" >Start</button></div>
 
     <script>
     document.getElementById("Button").onclick = function () {
