--- a/game.html
+++ b/game.html
@@ -10,30 +10,64 @@
 <body>
     <div class="grid-container">
         <div class="grid-item" id="title">
-            <h1> ***** MATCH</h1>
+            <h1> Bird Match</h1>
         </div>
         <div class="grid-item" id="game">
             <div class="game">
-                <div class="cards" id="1">1</div>
-                <div class="cards" id="2">2</div>
-                <div class="cards" id="3">3</div>
-                <div class="cards" id="4">4</div>
-                <div class="cards" id="5">5</div>
-                <div class="cards" id="6">6</div>
-                <div class="cards" id="7">7</div>
-                <div class="cards" id="8">8</div>
-                <div class="cards" id="9">9</div>
-                <div class="cards" id="10">10</div>
-                <div class="cards" id="11">11</div>
-                <div class="cards" id="12">12</div>
-                <div class="cards" id="13">13</div>
-                <div class="cards" id="14">14</div>
-                <div class="cards" id="15">15</div>
-                <div class="cards" id="16">16</div>
+                <div class="cards" id="1">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="2">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="3">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="4">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="5">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="6">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="7">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="8">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="9">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="10">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="11">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="12">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="13">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="14">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="15">
+                    <img src="cardback.png" alt="">
+                </div>
+                <div class="cards" id="16">
+                    <img src="cardback.png" alt="">
+                </div>
             </div>
         </div>
         <div class="grid-item" id="box">
             <button>RESET</button>
+        </div>
+        <div class="grid-item" id="score">
             <p>Score: </p>
         </div>
     </div>
