--- a/game.html
+++ b/game.html
@@ -7,13 +7,16 @@
     <title>Matching Game</title>
     <link rel="stylesheet" href="game.css">
 </head>
-<body>
+<body onload="intialize()">
     <div class="grid-container">
         <div class="grid-item" id="title">
             <h1> Bird Match</h1>
         </div>
         <div class="grid-item" id="game">
             <div class="game">
+                <div class="cards" id="0">
+                    <img src="cardback.png" alt="">
+                </div>
                 <div class="cards" id="1">
                     <img src="cardback.png" alt="">
                 </div>
@@ -57,9 +60,6 @@
                     <img src="cardback.png" alt="">
                 </div>
                 <div class="cards" id="15">
-                    <img src="cardback.png" alt="">
-                </div>
-                <div class="cards" id="16">
                     <img src="cardback.png" alt="">
                 </div>
             </div>
