--- a/game.html
+++ b/game.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Matching Game</title>
     <link rel="stylesheet" href="game.css">
+    <script src="game.js"></script>
 </head>
 <body onload="intialize()">
     <div class="grid-container">
@@ -14,7 +15,7 @@
         </div>
         <div class="grid-item" id="game">
             <div class="game">
-                <div class="cards" id="0">
+                <div class="cards" id="0" onclick="">
                     <img src="cardback.png" alt="">
                 </div>
                 <div class="cards" id="1">
