--- a/game.html
+++ b/game.html
@@ -15,31 +15,31 @@
         </div>
         <div class="grid-item" id="game">
             <div class="game">
-                <div class="cards" id="0" onclick="">
+                <div class="cards" id="0" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="1">
+                <div class="cards" id="1" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="2">
+                <div class="cards" id="2" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="3">
+                <div class="cards" id="3" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="4">
+                <div class="cards" id="4" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="5">
+                <div class="cards" id="5" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="6">
+                <div class="cards" id="6" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="7">
+                <div class="cards" id="7" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="8">
+                <div class="cards" id="8" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
                 <div class="cards" id="9">
