--- a/game.html
+++ b/game.html
@@ -42,25 +42,25 @@
                 <div class="cards" id="8" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="9">
+                <div class="cards" id="9" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="10">
+                <div class="cards" id="10" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="11">
+                <div class="cards" id="11" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="12">
+                <div class="cards" id="12" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="13">
+                <div class="cards" id="13" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="14">
+                <div class="cards" id="14" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="15">
+                <div class="cards" id="15" onclick="changeImg(id)">
                     <img src="cardback.png" alt="">
                 </div>
             </div>
