--- a/game.html
+++ b/game.html
@@ -15,58 +15,58 @@
         </div>
         <div class="grid-item" id="game">
             <div class="game">
-                <div class="cards" id="0" onclick="changeImg(id)">
+                <div class="cards" id="0" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="1" onclick="changeImg(id)">
+                <div class="cards" id="1" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="2" onclick="changeImg(id)">
+                <div class="cards" id="2" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="3" onclick="changeImg(id)">
+                <div class="cards" id="3" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="4" onclick="changeImg(id)">
+                <div class="cards" id="4" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="5" onclick="changeImg(id)">
+                <div class="cards" id="5" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="6" onclick="changeImg(id)">
+                <div class="cards" id="6" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="7" onclick="changeImg(id)">
+                <div class="cards" id="7" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="8" onclick="changeImg(id)">
+                <div class="cards" id="8" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="9" onclick="changeImg(id)">
+                <div class="cards" id="9" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="10" onclick="changeImg(id)">
+                <div class="cards" id="10" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="11" onclick="changeImg(id)">
+                <div class="cards" id="11" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="12" onclick="changeImg(id)">
+                <div class="cards" id="12" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="13" onclick="changeImg(id)">
+                <div class="cards" id="13" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="14" onclick="changeImg(id)">
+                <div class="cards" id="14" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
-                <div class="cards" id="15" onclick="changeImg(id)">
+                <div class="cards" id="15" onclick="changeImg(id), scoreKeep()">
                     <img src="cardback.png" alt="">
                 </div>
             </div>
         </div>
         <div class="grid-item" id="box">
-            <button>RESET</button>
+            <button onclick="completeReset()">RESET</button>
         </div>
         <div class="grid-item" id="score">
             <p>Score: </p>
